@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'idea'
     id 'org.springframework.boot' version '3.2.3'
     id 'io.spring.dependency-management' version '1.1.4'
     id 'org.graalvm.buildtools.native' version '0.9.28'
@@ -10,6 +11,9 @@ version = '0.0.1-SNAPSHOT'
 
 java {
     sourceCompatibility = '21'
+    targetCompatibility = '21'
+
+    toolchain {languageVersion -> JavaLanguageVersion.of(21)}
 }
 
 repositories {
@@ -21,6 +25,11 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs.add("--enable-preview")
+}
+
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs("--enable-preview")
 }
